# JavascriptBasics

./: GPT_Replace.txt  README.md
December/16th-Dec-Tues/: 03_product.py  04_product.py  database.py  database_model.py  hello.py  product.py
December/18th-Dec-Thurs/: Python_Data_Structure.ipynb  Python_Libraries.ipynb
December/19th-Dec-Fri/: Pandas.ipynb  Python_DataStructure.ipynb
December/22nd-Dec-Mon/: Advanced_Cleaning.ipynb  Data_Cleaning.ipynb  Handling_Missing_Values.ipynb  Pandas_DataStructure.ipynb  Practice.ipynb  students_marks.csv
December/23rd-Dec-Tues/: Bivarient_Analysis.ipynb
December/23rd-Dec-Wed/: Multivarient_Analysis.ipynb  OOPS.ipynb  employee.py
December/29th-Dec-Mon/: Height_Prediciton.ipynb  height_predictor.pk1
December/31st-Dec-Wed/: Gender_Classification.pk1  KMeans_Clustering.ipynb  University_Intelligence.pk1
December/8th-Dec-Mon/: arithmetic.js  assignment.js  bitwise.js  compare.js  datatype.js  hello.js  logical.js  mathematics.js  nullish.js  package-lock.json  relational.js  script.js  (+3 more)
January/19th-Jan-Mon/backend/: main.py  pyproject.toml
January/19th-Jan-Mon/backend/core/: config.py
January/19th-Jan-Mon/backend/db/: database.py
January/19th-Jan-Mon/backend/models/: todo.py
January/19th-Jan-Mon/backend/schemas/: todoSchema.py
January/22th-Jan-Thurs/backend/: auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
January/28th-Jan-Wed/backend/: .gitignore  database.py  main.py  models.py  pyproject.toml  schemas.py
LLM_Serving/: 01_RAG.ipynb  main.py  sample.py
March/: document.ipynb
(+304 files in other folders)
